Permanent scrollbar to avoid width changes

--- a/static/main.css
+++ b/static/main.css
@@ -78,6 +78,10 @@ h1 {
   text-align: center;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .collapsible {
   font-family: Josefin Sans;
   font-style: normal;
